@@ -1,3 +1,4 @@
+import { ClassNames } from "@emotion/react";
 import { JsonEditor, JsonEditorProps } from "jsoneditor-react";
 import React, { useEffect, useRef } from "react";
 
@@ -5,8 +6,22 @@ export const ControlledJSONEditor = ({
   value,
   onChange,
   schema,
+  isDisabled,
+  htmlElementProps,
   ...rest
-}: JsonEditorProps) => {
+}: JsonEditorProps & {
+  isDisabled?: boolean;
+}) => {
+  useEffect(() => {
+    const editor = (jsonEditorRef.current as any)?.jsonEditor;
+    const ace = editor?.aceEditor;
+    if (!editor || !ace) return;
+    if (isDisabled) {
+      ace.setReadOnly(true);
+    } else {
+      ace.setReadOnly(false);
+    }
+  }, [isDisabled]);
   const jsonEditorRef = useRef(null);
   useEffect(() => {
     const editor = (jsonEditorRef.current as any)?.jsonEditor;
@@ -20,12 +35,24 @@ export const ControlledJSONEditor = ({
   }, [jsonEditorRef, value]);
 
   return (
-    <JsonEditor
-      schema={schema}
-      ref={jsonEditorRef}
-      value={value}
-      onChange={onChange}
-      {...rest}
-    />
+    <ClassNames>
+      {({ css }) => (
+        <JsonEditor
+          schema={schema}
+          ref={jsonEditorRef}
+          value={value}
+          onChange={onChange}
+          htmlElementProps={{
+            ...htmlElementProps,
+            className: isDisabled
+              ? css`
+                  opacity: 0.6;
+                `
+              : ""
+          }}
+          {...rest}
+        />
+      )}
+    </ClassNames>
   );
 };
