@@ -1,6 +1,9 @@
 v3.11.2 (XXXX-XX-XX)
 --------------------
 
+
+* FE-240: disable JSON editor when viewing inverted index.
+
 * FE-287: fix number validation for replicationFactor and writeConcern.
 
 * FE-285: Fix query download - use post request for query.
